--- a/app/src/main/res/layout/activity_habit_setting.xml
+++ b/app/src/main/res/layout/activity_habit_setting.xml
@@ -506,6 +506,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rcv_reminder"
                         android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_gravity="center_horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -513,7 +514,8 @@
                         android:id="@+id/btn_add_reminder"
                         android:layout_width="@dimen/_50sdp"
                         android:layout_height="@dimen/_50sdp"
-                        android:layout_marginTop="@dimen/_10sdp">
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:onClick="@{(v) -> a.onClick(v)}">
 
                         <ImageView
                             android:layout_width="wrap_content"
