--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -112,74 +112,89 @@
                 android:textSize="@dimen/_13ssp"
                 android:textStyle="bold"/>
 
-
-            <TextView
-                android:id="@+id/t_todo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:text="List to do"
-                android:textSize="@dimen/_10ssp"
-                android:textStyle="bold"
-                android:background="#E0E0E0"
-                android:visibility="visible"
-                android:gravity="center"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_habit_list"
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_10sdp"/>
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
 
-            <TextView
-                android:id="@+id/t_done"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:text="DONE"
-                android:textSize="@dimen/_10ssp"
-                android:textStyle="bold"
-                android:background="#E0E0E0"
-                android:visibility="gone"
-                android:gravity="center"/>
+                    <TextView
+                        android:id="@+id/t_todo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_marginEnd="@dimen/_8sdp"
+                        android:text="List to do"
+                        android:textSize="@dimen/_10ssp"
+                        android:textStyle="bold"
+                        android:background="#E0E0E0"
+                        android:visibility="gone"
+                        android:gravity="center"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_habit_done_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_10sdp"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rcv_habit_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_10sdp"/>
 
 
-            <TextView
-                android:id="@+id/t_failed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:text="FAILED"
-                android:textSize="@dimen/_10ssp"
-                android:textStyle="bold"
-                android:background="#E0E0E0"
-                android:visibility="gone"
-                android:gravity="center"/>
+                    <TextView
+                        android:id="@+id/t_done"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_marginEnd="@dimen/_8sdp"
+                        android:text="DONE"
+                        android:textSize="@dimen/_10ssp"
+                        android:textStyle="bold"
+                        android:background="#E0E0E0"
+                        android:visibility="gone"
+                        android:gravity="center"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_habit_failed_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_10sdp"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rcv_habit_done_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_10sdp"/>
+
+
+                    <TextView
+                        android:id="@+id/t_failed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:layout_marginEnd="@dimen/_8sdp"
+                        android:text="FAILED"
+                        android:textSize="@dimen/_10ssp"
+                        android:textStyle="bold"
+                        android:background="#E0E0E0"
+                        android:visibility="gone"
+                        android:gravity="center"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rcv_habit_failed_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_10sdp"/>
+
+                </LinearLayout>
+
+            </ScrollView>
+
 
         </LinearLayout>
 
