--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -130,12 +130,13 @@
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_marginEnd="@dimen/_8sdp"
-                        android:text="List to do"
+                        android:text="LIST TO DO"
                         android:textSize="@dimen/_10ssp"
                         android:textStyle="bold"
                         android:background="#E0E0E0"
                         android:visibility="gone"
-                        android:gravity="center"/>
+                        android:gravity="center"
+                        android:onClick="@{(v) -> a.onClick(v)}"/>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rcv_habit_list"
@@ -143,7 +144,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"/>
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:visibility="gone"/>
 
 
                     <TextView
@@ -158,7 +160,8 @@
                         android:textStyle="bold"
                         android:background="#E0E0E0"
                         android:visibility="gone"
-                        android:gravity="center"/>
+                        android:gravity="center"
+                        android:onClick="@{(v) -> a.onClick(v)}"/>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rcv_habit_done_list"
@@ -166,7 +169,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"/>
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:visibility="gone"/>
 
 
                     <TextView
@@ -181,7 +185,8 @@
                         android:textStyle="bold"
                         android:background="#E0E0E0"
                         android:visibility="gone"
-                        android:gravity="center"/>
+                        android:gravity="center"
+                        android:onClick="@{(v) -> a.onClick(v)}"/>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rcv_habit_failed_list"
@@ -189,7 +194,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"/>
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:visibility="gone"/>
 
                 </LinearLayout>
 
