--- a/app/src/main/res/layout/rcv_item_habit_after.xml
+++ b/app/src/main/res/layout/rcv_item_habit_after.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
-            android:background="@drawable/bck_item_failed">
+            android:background="@drawable/bck_item_after">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
@@ -25,13 +25,13 @@
                 android:layout_marginStart="@dimen/_20sdp">
 
                 <com.google.android.material.imageview.ShapeableImageView
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_40sdp"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="@dimen/_35sdp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:src="@drawable/ic_item_habit_failed"
+                    android:src="@drawable/ic_item_habit_after"
                     app:shapeAppearanceOverlay="@style/corner" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
