--- a/app/src/main/res/layout/rcv_item_habit_done.xml
+++ b/app/src/main/res/layout/rcv_item_habit_done.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/hitem"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/_70sdp">
 
         <LinearLayout
