--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -114,7 +114,8 @@
                     layout="@layout/layout_ver_calendar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp" />
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginBottom="@dimen/_20sdp"/>
 
 
                 <TextView
