--- a/app/src/main/res/layout/layout_ver_calendar.xml
+++ b/app/src/main/res/layout/layout_ver_calendar.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -118,17 +118,15 @@
                 android:textAlignment="center"
                 android:textSize="@dimen/_20ssp" />
 
-
         </LinearLayout>
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_calendar_ver"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_25sdp"
-            android:layout_marginEnd="@dimen/_25sdp"
-            android:layout_marginTop="@dimen/_5sdp"/>
+            android:layout_marginEnd="@dimen/_25sdp"/>
 
     </LinearLayout>
 </LinearLayout>
