update longest steak and best habit

--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -148,6 +148,7 @@
                     android:gravity="center"/>
 
                 <include
+                    android:id="@+id/record"
                     layout="@layout/layout_your_record"/>
 
                 <TextView
