--- a/app/src/main/res/layout/layout_your_record.xml
+++ b/app/src/main/res/layout/layout_your_record.xml
@@ -38,6 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/long_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
@@ -110,6 +111,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/best_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
@@ -129,16 +131,35 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:text="Best\nHabit"
-            android:textColor="#5A5858"
-            android:textSize="@dimen/_16ssp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:text="Best\nHabit"
+                android:textColor="#5A5858"
+                android:textSize="@dimen/_16ssp"
+                android:textStyle="bold"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/h_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:gravity="center"
+                android:text="Hello"
+                android:textSize="@dimen/_15ssp"
+                android:textStyle="bold"
+                android:textColor="#7D682F"/>
+
+        </LinearLayout>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="@dimen/_80sdp"
