--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -127,12 +127,14 @@
                     android:textSize="@dimen/_12ssp"
                     android:textStyle="bold"
                     android:background="@drawable/bck_planner_ac_titile"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:visibility="gone"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_200sdp"
-                    android:layout_marginTop="@dimen/_10sdp"/>
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:visibility="gone"/>
 
 
                 <TextView
@@ -164,6 +166,7 @@
                     android:gravity="center"/>
 
                 <include
+                    android:id="@+id/w_car"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_140sdp"
                     android:layout_marginStart="@dimen/_15sdp"
